--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=3U`gL89QQXMMQ:]~
 spring.cloud.gcp.config.project-id=beefsenseapp
 spring.cloud.gcp.sql.database-name=beefsense-db
 spring.cloud.gcp.sql.instance-connection-name=beefsenseapp:southamerica-west1:beefsense-db
-spring.cloud.gcp.credentials.location=file:/app/config/beefsenseapp-f1d007644db8.json
+spring.cloud.gcp.credentials.location=file:./src/main/resources/beefsenseapp-f1d007644db8.json
 
 # Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
