--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,16 @@
         </dependencies>
     </dependencyManagement>
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/com.google.cloud.sql/postgres-socket-factory -->
+        <dependency>
+			<groupId>org.tensorflow</groupId>
+			<artifactId>tensorflow</artifactId>
+			<version>1.15.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.tensorflow</groupId>
+			<artifactId>libtensorflow</artifactId>
+			<version>1.15.0</version>
+		</dependency>
         <dependency>
             <groupId>com.google.cloud.sql</groupId>
             <artifactId>postgres-socket-factory</artifactId>
@@ -122,11 +131,6 @@
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>1.6.4</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.google.cloud.tools</groupId>-->
-<!--            <artifactId>appengine-maven-plugin</artifactId>-->
-<!--            <version>2.8.1</version>-->
-<!--        </dependency>-->
     </dependencies>
 
     <build>
