--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
     </dependencyManagement>
     <dependencies>
         <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-storage</artifactId>
+            <version>2.43.0</version>
+        </dependency>
+        <dependency>
 			<groupId>org.tensorflow</groupId>
 			<artifactId>tensorflow</artifactId>
 			<version>1.15.0</version>
