--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,24 +5,24 @@ services:
       context: .
       dockerfile: Dockerfile
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://cloudsql-proxy:5432/beefsense-db
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://cloudsql-proxy:5432/beefsense2-db
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=3U`gL89QQXMMQ:]~
-      - SPRING_CLOUD_GCP_PROJECT_ID=beefsenseapp
-      - SPRING_CLOUD_GCP_SQL_DATABASE_NAME=beefsense-db
-      - SPRING_CLOUD_GCP_SQL_INSTANCE_CONNECTION_NAME=beefsenseapp:southamerica-west1:beefsense-db
-      - GOOGLE_APPLICATION_CREDENTIALS=/app/config/beefsenseapp-f1d007644db8.json
+      - SPRING_CLOUD_GCP_PROJECT_ID=beefsense2
+      - SPRING_CLOUD_GCP_SQL_DATABASE_NAME=beefsense2-db
+      - SPRING_CLOUD_GCP_SQL_INSTANCE_CONNECTION_NAME=beefsense2:southamerica-west1:beefsense2-db
+      - GOOGLE_APPLICATION_CREDENTIALS=/app/config/beefsense2-9694befc1c02.json
     depends_on:
       - cloudsql-proxy
     ports:
       - "8080:8080"
     volumes:
-      - ./src/main/resources/beefsenseapp-f1d007644db8.json:/app/config/beefsenseapp-f1d007644db8.json
+      - ./src/main/resources/beefsense2-9694befc1c02.json:/app/config/beefsense2-9694befc1c02.json
 
   cloudsql-proxy:
     image: gcr.io/cloudsql-docker/gce-proxy:latest
     volumes:
-      - ./src/main/resources/beefsenseapp-f1d007644db8.json:/config/beefsenseapp-f1d007644db8.json
-    command: /cloud_sql_proxy -instances=beefsenseapp:southamerica-west1:beefsense-db=tcp:5432 -credential_file=/config/beefsenseapp-f1d007644db8.json
+      - ./src/main/resources/beefsense2-9694befc1c02.jsonn:/config/beefsense2-9694befc1c02.json
+    command: /cloud_sql_proxy -instances=beefsense2:southamerica-west1:beefsense2-db=tcp:5432 -credential_file=/config/beefsense2-9694befc1c02.json
     expose:
       - "5432"
