--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 # Database connection properties
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://cloudsql-proxy:5432/beefsense-db
+spring.datasource.url=jdbc:postgresql://cloudsql-proxy:5432/beefsense2-db
 spring.datasource.username=postgres
 spring.datasource.password=3U`gL89QQXMMQ:]~
 
 # Google Cloud SQL properties
-spring.cloud.gcp.config.project-id=beefsenseapp
-spring.cloud.gcp.sql.database-name=beefsense-db
-spring.cloud.gcp.sql.instance-connection-name=beefsenseapp:southamerica-west1:beefsense-db
-spring.cloud.gcp.credentials.location=file:./src/main/resources/beefsenseapp-f1d007644db8.json
+spring.cloud.gcp.config.project-id=beefsense2
+spring.cloud.gcp.sql.database-name=beefsense2-db
+spring.cloud.gcp.sql.instance-connection-name=beefsense2:southamerica-west1:beefsense2-db
+spring.cloud.gcp.credentials.location=file:./src/main/resources/beefsense2-9694befc1c02.json
 
 # Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
