--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,11 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
-*.json
 # Eclipse m2e generated files
 # Eclipse Core
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 *.json
+src/main/resources/beefsense2-9694befc1c02.json
+src/main/resources/beefsenseapp-f1d007644db8.json
